# QED-Nano

./: .gitignore
eval/: EVAL_GUIDE.md  pyproject.toml
eval/bash/: eval_direct.sh  eval_ds.sh  eval_rc.sh  eval_stage2_dense_outcome.sh  eval_stage2_dense_process.sh  eval_stage2_grpo.sh  eval_stage2_instruct.sh  eval_stage2_self_distill.sh  eval_stage2_sft.sh  run_stage2.sh  run_summary.sh
eval/notebook/: analyze_proof_technique_deltas.py  annotate_proof_techniques_async.py  plot_bootstrap_passk.py  plot_utils.py  results.ipynb  run_imoproofbench_proof_technique_annotations.sh  run_imoproofbench_reasoning_trace_technique_annotations.sh  run_proof_technique_annotations.sh  run_proof_technique_delta_analyses.sh
eval/scripts/: eval.py  grading.py  run_summary.py  upload_graded.py
training/: CLAUDE.md  dev_node.slurm  dev_node.slurm~  dev_node_preempt.slurm  monitor_and_restart.sh  pyproject.toml  run_dense_outcome.sh  run_grpo.sh  run_self_distill.sh  run_sft.sh  upload_checkpoints.py  upload_checkpoints.sh
training/conf/: base.yaml  dense_outcome.yaml  dense_process.yaml  dense_process_stage2.yaml  exp_rl_pr_stage1.yaml  grpo_stage1_proof.yaml  grpo_stage2.yaml  qwen4b_instruct.yaml  self_distill.yaml  self_distill_cont.yaml  self_distill_stage2.yaml  sft.yaml
training/logs/: dev_node_200294.err  dev_node_200299.err  dev_node_200307.err  dev_node_200314.err  dev_node_200994.err
training/pipelinerl/: actor.py  finetune_loop.py  launch.py  rollouts.py  utils.py  vllm0.py  world.py
training/preprocess_data/: build_fineproofs_abc.py  build_fineproofs_stage1.py
(+132 files in other folders)
