[project]
name = "qed-eval"
version = "0.1.0"
description = "IMOBench evaluator"
readme = "README.md"
authors = [
    { name = "Jasper Dekoninck", email = "jasper.dekoninck@inf.ethz.ch" },
]
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.49.0",
    "loguru>=0.7.3",
    "openai>=1.102.0",
    "requests>=2.32.3",
    "together>=1.3.14",
    "json5>=0.10.0",
    "regex>=2024.11.6",
    "datasets >= 3.5.0",
    "pyyaml>=6.0",
    "vllm==0.11.2",
    "huggingface-hub==0.36.0",
]


[tool.hatch.build.targets.wheel]
packages = ["src/imobench"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"